fix: update output paths and entrypoints in mach.toml for consistency feat: add initial implementation of lib.mach with necessary imports

--- a/mach.toml
+++ b/mach.toml
@@ -8,9 +8,10 @@ target = "native"
 
 [targets.linux]
 triple = "x86_64-pc-linux-gnu"
+entrypoint = "lib.mach"
 mode = "library"
-artifacts = "out/mach-std/linux"
-output = "out/mach-std/linux/bin/mach-std"
+artifacts = "out/std/linux"
+output = "out/std/linux/bin/libmachstd.a"
 debug = false
 optimize = true
 emit-ast = true
@@ -21,9 +22,10 @@ no-pie = false
 
 [targets.darwin]
 triple = "x86_64-apple-darwin"
+entrypoint = "lib.mach"
 mode = "library"
-artifacts = "out/mach-std/darwin"
-output = "out/mach-std/darwin/bin/mach-std"
+artifacts = "out/std/darwin"
+output = "out/std/darwin/bin/libmachstd.a"
 debug = true
 optimize = true
 emit-ast = true
@@ -34,8 +36,9 @@ no-pie = false
 
 [targets.windows]
 triple = "x86_64-pc-windows-msvc"
-artifacts = "out/mach-std/windows"
-output = "out/mach-std/windows/bin/mach-std.exe"
+entrypoint = "lib.mach"
+artifacts = "out/std/windows"
+output = "out/std/windows/bin/machstd.lib"
 mode = "library"
 debug = true
 optimize = true
